--- a/app/src/App.css
+++ b/app/src/App.css
@@ -86,3 +86,14 @@
   clear: both;
   margin-top: 10px;
 }
+
+.search-container .search-button button{
+  padding: 6px 10px;
+  margin-top: 8px;
+  margin-right: 16px;
+  background: #ddd;
+  background-color: #e9ecef;
+  font-size: 17px;
+  border: none;
+  cursor: pointer;
+}
