--- a/app/src/App.css
+++ b/app/src/App.css
@@ -54,6 +54,10 @@
   padding-right: 0px !important;
 }
 
+#navbar {
+
+}
+
 .search {
   display: inline;
   margin-right: 10px;
@@ -121,6 +125,7 @@
   justify-content: space-between;
   column-gap: 20px;
 }
+
 .city-box-col {
   max-width: 25%;
   flex: 1;
@@ -130,6 +135,11 @@
 .city-box {
   padding: 1.25rem .5rem;
   margin: 0 10px;
+  flex: 1;        /* makes contents same size as parent div (.city-box-col) */
+  min-height: 150px; /* Change this to what you need. */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 footer {
