--- a/app/src/SearchBox.module.scss
+++ b/app/src/SearchBox.module.scss
@@ -30,8 +30,10 @@
 .suggestionsContainerOpen {
   display: block;
   position: absolute;
-  width: 30%;
+  width: 300px;
   border: 1px solid rgba(0, 0, 0, .125);
+  border-top: none;
+  border-radius: 4px;
   background-color: #fff;
   font-family: Helvetica, sans-serif;
   font-weight: 300;
