--- a/app/src/App.css
+++ b/app/src/App.css
@@ -229,12 +229,51 @@ footer {
   padding: 10px 20px;
 }
 
+.add-dest-container {
+  width: 600px;
+  margin: 0 auto;
+}
+
 .image-upload-box {
-  width: 50%;
+  width: 100%;
+  height: 120px;
   margin: 10px 0;
   padding: 20px;
   border: 1px solid rgba(0, 0, 0, .125);
   border-radius: 4px;
+}
+
+.image-preview {
+  width: 100%;
+  height: auto;
+  margin: 10px 0;
+  padding: 10px;
+  border: 1px solid rgba(0, 0, 0, .125);
+  border-radius: 4px;
+}
+
+.image-preview > legend {
+  width: auto;
+  padding: 0 6px;
+  font-size: 12px;
+}
+
+.city-img {
+  width: 200px;
+  height: 130px;
+  object-fit:cover;
+}
+
+.add-dest-div {
+
+
+  width: 100%;
+  margin: 10px 0 !important;
+}
+
+.PrivateNotchedOutline-root-1 {
+  border-color: rgba(0, 0, 0, .125) !important;
+  border-width: 1px !important;
 }
 
 footer > p {
