Show img upload error

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -81,15 +81,25 @@
 }
 
 /* override button colors */
-.btn-primary, .btn-primary:hover, .btn-primary:active, .btn-primary:visited {
+.btn-primary, .btn-primary:active, .btn-primary:visited {
   background-color: #625eea !important;
   border-color: #625eea !important;
 }
 
-.btn-secondary, .btn-secondary:hover, .btn-secondary:active, .btn-secondary:visited {
+.btn-primary:hover {
+  background-color: #524eca !important;
+  border-color: #524eca !important;
+}
+
+.btn-secondary, .btn-secondary:active, .btn-secondary:visited {
   background-color: #e9ecef !important;
   border-color: #e9ecef !important;
   color: black !important;
+}
+
+.btn-secondary:hover {
+  background-color: #d6d9db !important;
+  border-color: #d6d9db !important;
 }
 
 .list-item {
@@ -243,19 +253,55 @@ footer {
   border-radius: 4px;
 }
 
-.image-preview {
+.img-url-form {
+  display: inline-flex;
+  width: 100%;
+}
+
+.img-url-input {
+  border: 0;
+  width: 100%;
+  outline: none;
+}
+
+.img-url-btn {
+  margin-left: 20px;
+  height: auto;
+  margin-top: 16px;
+  margin-left: 10px;
+  outline: none;
+}
+
+.add-dest-fieldset {
   width: 100%;
   height: auto;
-  margin: 10px 0;
-  padding: 10px;
+  margin: 10px 0 0 0;
+  padding: 6px 14px;
   border: 1px solid rgba(0, 0, 0, .125);
   border-radius: 4px;
 }
 
-.image-preview > legend {
+.add-dest-fieldset > legend {
+  margin-bottom: 0;
   width: auto;
-  padding: 0 6px;
+  padding: 0 4px;
   font-size: 12px;
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  font-weight: 400;
+  line-height: 1.1876em;
+  letter-spacing: 0.00938em;
+}
+
+.fieldset-error {
+  border-color: red;
+  color: red;
+}
+
+.warning-msg {
+  text-align: left;
+  margin-left: 4px;
+  font-size: 10px;
+  color: red;
 }
 
 .city-img {
@@ -265,8 +311,6 @@ footer {
 }
 
 .add-dest-div {
-
-
   width: 100%;
   margin: 10px 0 !important;
 }
